@@ -1,3 +1,7 @@
+2001-02-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Fixed numpydataset.cpp to use sscanf() to parse pointer.
+
 2001-02-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added support for R*4 (Float32) images in SAR_CEOS reader.
